--- a/Python/codeforce-153.ipynb
+++ b/Python/codeforce-153.ipynb
@@ -8,8 +8,10 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
-    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "sys.stdin = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
     "input = sys.stdin.readline\n",
     "t = int(input())\n",
     "for _ in range(t):\n",
@@ -22,8 +24,7 @@
     "    elif brackets not in s2:\n",
     "        print('YES\\n' + s2)\n",
     "    else:\n",
-    "        print('NO')\n",
-    "\n"
+    "        print('NO')"
    ]
   },
   {
@@ -34,8 +35,10 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
-    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "sys.stdin = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
     "input = sys.stdin.readline\n",
     "t = int(input())\n",
     "for _ in range(t):\n",
@@ -58,8 +61,10 @@
    "source": [
     "import sys\n",
     "\n",
-    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
-    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "sys.stdin = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(\n",
+    "    r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
     "input = sys.stdin.readline\n",
     "t = int(input())\n",
     "for _ in range(t):\n",
@@ -76,8 +81,137 @@
     "            if a[i] > a[i+1]:\n",
     "                continue\n",
     "            else:\n",
-    "                count+=1\n",
-    "        print(count)\n"
+    "                count += 1\n",
+    "        print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "am\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input().split()[0]\n",
+    "if s in [\"He\", \"She\", \"It\"]:\n",
+    "    print(\"is\")\n",
+    "elif s in [\"We\", \"You\", \"They\"]:\n",
+    "    print(\"are\")\n",
+    "elif s == \"I\":\n",
+    "    print(\"am\")\n",
+    "else:\n",
+    "    print(\"is\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "171\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "n, k = map(int, input().split())\n",
+    "a = list(map(int, input().split()))\n",
+    "b = list(map(int, input().split()))\n",
+    "ans = max_product = 0\n",
+    "for i in range(n):\n",
+    "    ans += a[i] * b[i]\n",
+    "for i in range(n):\n",
+    "    k1 = (\n",
+    "        (b[i] + k - a[i]) // 2 if (b[i] + k - a[i]\n",
+    "                                   ) // 2 > 0 else (a[i] + k - b[i]) // 2\n",
+    "    )\n",
+    "    k2 = k - k1\n",
+    "    if k1 < 0 or k2 < 0:\n",
+    "        max_product = max(max_product, a[i] * k, b[i] * k)\n",
+    "    else:\n",
+    "        max_product = max(\n",
+    "            max_product,\n",
+    "            a[i] * k1 + b[i] * k2 + k1 * k2,\n",
+    "            a[i] * k2 + b[i] * k1 + k1 * k2,\n",
+    "        )\n",
+    "print(max_product + ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "YES\n",
+      "82184618 100000000\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = float(input())\n",
+    "print(\"YES\")\n",
+    "print(int(s * 10**8), 10**8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'aba'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def reorganizeString(self, s: str) -> str:\n",
+    "        counter = Counter(s)\n",
+    "        x, y = counter.most_common(1)[0]\n",
+    "        ans = [x] * y\n",
+    "        del counter[x]\n",
+    "        k = 0\n",
+    "        for key, val in counter.items():\n",
+    "            for _ in range(val):\n",
+    "                ans[k % y] += key\n",
+    "                k += 1\n",
+    "        st = \"\".join(ans)\n",
+    "        for i in range(len(st) - 1):\n",
+    "            if st[i] == st[i + 1]:\n",
+    "                return \"\"\n",
+    "        return st\n",
+    "\n",
+    "\n",
+    "s = \"babbaaaacc\"\n",
+    "s = \"aab\"\n",
+    "# s = \"aaab\"\n",
+    "Solution().reorganizeString(s)"
    ]
   }
  ],
