codeforces nhiệt tình

--- a/Python/codeforce-24_8.ipynb
+++ b/Python/codeforce-24_8.ipynb
@@ -105,21 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
-    "from math import sqrt\n",
+    "from decimal import Decimal\n",
     "\n",
     "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
     "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
     "input = sys.stdin.readline\n",
+    "out = sys.stdout.write\n",
     "t = int(input())\n",
     "for _ in range(t):\n",
     "    n = int(input())\n",
-    "    creams = int((1 + sqrt(1 + 8 * n)) / 2)\n",
-    "    print(creams + n - creams * (creams - 1) // 2)"
+    "    creams = int((Decimal(1 + 8 * n).sqrt() + 1) / 2)\n",
+    "    out(str(creams + n - creams * (creams - 1) // 2) + \"\\n\")"
    ]
   },
   {
@@ -155,6 +156,24 @@
     "        ans = max(ans, s + b[i + 1])\n",
     "    ans = max(ans, 0)\n",
     "    print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = 100\n",
+    "l = []\n",
+    "import random\n",
+    "\n",
+    "for i in range(n):\n",
+    "    x = random.randint(-500, 500)\n",
+    "    l.append(list((x, x + random.randint(1, 500))))\n",
+    "import pyperclip\n",
+    "\n",
+    "pyperclip.copy(str(l))"
    ]
   }
  ],
