--- a/Python/codeforces-895.ipynb
+++ b/Python/codeforces-895.ipynb
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,20 +244,16 @@
     "for _ in range(t):\n",
     "    n, m = map(int, input().split())\n",
     "    base = list(range(m))\n",
-    "    if n == 1:\n",
-    "        print(2)\n",
-    "        print(*base)\n",
-    "        continue\n",
     "    if m == 1:\n",
     "        print(0)\n",
     "        for _ in range(n):\n",
     "            print(0)\n",
     "        continue\n",
-    "    t = min(n, m) - 1\n",
-    "    matrix = [base[i + 1 :] + base[: i + 1] for i in range(t)]\n",
+    "    t = min(n, m)\n",
+    "    matrix = [base[i:] + base[:i] for i in range(t)]\n",
     "    for i in range(len(matrix), n):\n",
     "        matrix.append(matrix[i % t])\n",
-    "    print(m)\n",
+    "    print(min(n + 1, m))\n",
     "    for i in matrix:\n",
     "        print(*i)"
    ]
