--- a/Python/code-part-16.ipynb
+++ b/Python/code-part-16.ipynb
@@ -143,6 +143,42 @@
     "    s.printAllLeaves(root)\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    a = list(map(int, input().split()))\n",
+    "    if n == 1:\n",
+    "        print(0)\n",
+    "        continue\n",
+    "    d = defaultdict(int)\n",
+    "    for i in a:\n",
+    "        d[i] += 1\n",
+    "    ans = 0\n",
+    "    for i in range(n - 2, -1, -1):\n",
+    "        if d[a[i]] == 0:\n",
+    "            a[i] = 0\n",
+    "            continue\n",
+    "        if a[i] > a[i + 1]:\n",
+    "            d[a[i]] = 0\n",
+    "            a[i] = 0\n",
+    "            ans += 1\n",
+    "    if d[a[-1]] == 0 and a[-2] > 0:\n",
+    "        ans += 1\n",
+    "    print(ans)"
+   ]
   }
  ],
  "metadata": {
