--- a/Python/codeforces-div4-219.ipynb
+++ b/Python/codeforces-div4-219.ipynb
@@ -216,6 +216,31 @@
     "        mins = min(mins, index_B[i + 1] - index_B[i] - 1)\n",
     "    print(ans - mins)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "n = int(input())\n",
+    "a = list(map(int, input().split()))\n",
+    "xor = [0] * (n + 1)\n",
+    "for i in range(n):\n",
+    "    xor[i + 1] = xor[i] ^ a[i]\n",
+    "s = 0\n",
+    "for i in range(2, n + 1):\n",
+    "    s += xor[i] * i\n",
+    "print(sum(a) + s)\n",
+    "print(xor)"
+   ]
   }
  ],
  "metadata": {
