--- a/Python/codeforces-901-div2.ipynb
+++ b/Python/codeforces-901-div2.ipynb
@@ -202,50 +202,248 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "pop expected at least 1 argument, got 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\nguye\\Documents\\Code\\Programming\\Python\\codeforces-901-div2.ipynb Cell 6\u001b[0m line \u001b[0;36m7\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-901-div2.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# multiset in Python\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-901-div2.ipynb#W6sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m c\u001b[39m.\u001b[39mget(\u001b[39m5\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-901-div2.ipynb#W6sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mprint\u001b[39m(c\u001b[39m.\u001b[39;49mpop())\n",
-      "\u001b[1;31mTypeError\u001b[0m: pop expected at least 1 argument, got 0"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
+    "import sys\n",
     "\n",
-    "c = Counter([1, 2, 3, 1, 2, 2, 1, 2, 3])\n",
-    "c\n",
-    "# multiset in Python\n",
-    "c.get(5)\n",
-    "print(c.pop())"
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "w = list(map(int, input().split()))\n",
+    "edge = []\n",
+    "for i in range(n - 1):\n",
+    "    u, v = map(int, input().split())\n",
+    "    edge.append((u - 1, v - 1))\n",
+    "max_w = 0\n",
+    "for i in range(1 << n):\n",
+    "    check = True\n",
+    "    for u, v in edge:\n",
+    "        if (1 << u) & i and (1 << v) & i:\n",
+    "            check = False\n",
+    "            break\n",
+    "    if check:\n",
+    "        max_w = max(max_w, sum(w[j] for j in range(n) if (1 << j) & i))\n",
+    "print(max_w)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found\n"
+      "21\n"
      ]
     }
    ],
    "source": [
-    "import os\n",
-    "if not os.path.exists(\"test.inp\"):\n",
-    "    print(\"Not found\")\n",
-    "else:\n",
-    "    print(\"Found\")"
+    "from functools import lru_cache\n",
+    "\n",
+    "\n",
+    "@lru_cache()\n",
+    "def fibo(n):\n",
+    "    if n <= 1:\n",
+    "        return n\n",
+    "    return fibo(n - 1) + fibo(n - 2)\n",
+    "\n",
+    "\n",
+    "print(fibo(int(input()) - 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "000\n",
+      "001\n",
+      "010\n",
+      "100\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "def gen_bin_pem(n):\n",
+    "    for i in range(0, 2):\n",
+    "        if n == 1:\n",
+    "            yield str(i)\n",
+    "        else:\n",
+    "            for j in gen_bin_pem(n - 1):\n",
+    "                if i == 1 and j[0] == \"1\":\n",
+    "                    continue\n",
+    "                yield str(i) + j\n",
+    "\n",
+    "\n",
+    "for i in gen_bin_pem(int(input())):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3\n",
+      "1 3 2\n",
+      "2 1 3\n",
+      "2 3 1\n",
+      "3 1 2\n",
+      "3 2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Permutation:\n",
+    "    def __init__(self, n) -> None:\n",
+    "        self.a = []\n",
+    "        self.chosen = [False] * n\n",
+    "        self.n = n\n",
+    "\n",
+    "    def permutation(self):\n",
+    "        if len(self.a) == self.n:\n",
+    "            print(*self.a)\n",
+    "        else:\n",
+    "            for i in range(self.n):\n",
+    "                if self.chosen[i]:\n",
+    "                    continue\n",
+    "                self.chosen[i] = True\n",
+    "                self.a.append(i + 1)\n",
+    "                self.permutation()\n",
+    "                self.chosen[i] = False\n",
+    "                self.a.pop()\n",
+    "\n",
+    "\n",
+    "Permutation(int(input())).permutation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "601080390\n"
+     ]
+    }
+   ],
+   "source": [
+    "MOD = 10**9 + 7\n",
+    "\n",
+    "\n",
+    "def comb(n, k):\n",
+    "    if k == 0 or k == n:\n",
+    "        return 1\n",
+    "    res = 1\n",
+    "    for i in range(k):\n",
+    "        res = res * (n - i) // (i + 1)\n",
+    "    return res % MOD\n",
+    "\n",
+    "\n",
+    "k, n = map(int, input().split())\n",
+    "print(comb(n, k))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "import sys\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "def countSudoku(matrix: List[List[int]]) -> int:\n",
+    "    def check(x, y, k):\n",
+    "        for i in range(9):\n",
+    "            if matrix[x][i] == k or matrix[i][y] == k:\n",
+    "                return False\n",
+    "        for i in range(3):\n",
+    "            for j in range(3):\n",
+    "                if matrix[x // 3 * 3 + i][y // 3 * 3 + j] == k:\n",
+    "                    return False\n",
+    "        return True\n",
+    "\n",
+    "    def solve(x, y):\n",
+    "        if x == 9:\n",
+    "            return True\n",
+    "        if y == 9:\n",
+    "            return solve(x + 1, 0)\n",
+    "        if matrix[x][y] != 0:\n",
+    "            return solve(x, y + 1)\n",
+    "        for i in range(1, 10):\n",
+    "            if check(x, y, i):\n",
+    "                matrix[x][y] = i\n",
+    "                if solve(x, y + 1):\n",
+    "                    return True\n",
+    "                matrix[x][y] = 0\n",
+    "        return False\n",
+    "\n",
+    "    solve(0, 0)\n",
+    "    # return matrix\n",
+    "matrix = [list(map(int, input().split())) for _ in range(9)]\n",
+    "print(countSudoku(matrix))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def isValidSudoku(self, board: List[List[str]]) -> bool:\n",
+    "        def check(x, y, k):\n",
+    "            for i in range(9):\n",
+    "                if board[x][i] == k or board[i][y] == k:\n",
+    "                    return False\n",
+    "            for i in range(3):\n",
+    "                for j in range(3):\n",
+    "                    if board[x // 3 * 3 + i][y // 3 * 3 + j] == k:\n",
+    "                        return False\n",
+    "            return True\n",
+    "\n",
+    "        def solve(x, y):\n",
+    "            if x == 9:\n",
+    "                return True\n",
+    "            if y == 9:\n",
+    "                return solve(x + 1, 0)\n",
+    "            if board[x][y] != \".\":\n",
+    "                return solve(x, y + 1)\n",
+    "            for i in range(1, 10):\n",
+    "                if check(x, y, str(i)):\n",
+    "                    board[x][y] = str(i)\n",
+    "                    if solve(x, y + 1):\n",
+    "                        return True\n",
+    "                    board[x][y] = \".\"\n",
+    "            return False\n",
+    "\n",
+    "        solve(0, 0)"
    ]
   }
  ],
