--- a/Python/codeforces-900.ipynb
+++ b/Python/codeforces-900.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: '3 5'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\nguye\\Documents\\Code\\Programming\\Python\\codeforces-900.ipynb Cell 1\u001b[0m line \u001b[0;36m6\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-900.ipynb#W0sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m sys\u001b[39m.\u001b[39mstdout \u001b[39m=\u001b[39m \u001b[39mopen\u001b[39m(\u001b[39mr\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mC:\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mUsers\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mnguye\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mDocuments\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mCode\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mProgramming\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mC++\u001b[39m\u001b[39m\\\u001b[39m\u001b[39mtest.out\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-900.ipynb#W0sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39minput\u001b[39m \u001b[39m=\u001b[39m sys\u001b[39m.\u001b[39mstdin\u001b[39m.\u001b[39mreadline\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-900.ipynb#W0sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m t \u001b[39m=\u001b[39m \u001b[39mint\u001b[39;49m(\u001b[39minput\u001b[39;49m())\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-900.ipynb#W0sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39mfor\u001b[39;00m _ \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(t):\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/nguye/Documents/Code/Programming/Python/codeforces-900.ipynb#W0sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m     n, k \u001b[39m=\u001b[39m \u001b[39mmap\u001b[39m(\u001b[39mint\u001b[39m, \u001b[39minput\u001b[39m()\u001b[39m.\u001b[39msplit())\n",
+      "\u001b[1;31mValueError\u001b[0m: invalid literal for int() with base 10: '3 5'"
+     ]
+    }
+   ],
    "source": [
     "import sys\n",
     "\n",
@@ -25,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -323,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -506,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -672,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -698,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,6 +751,281 @@
     "ans.sort()\n",
     "for i in ans:\n",
     "    print(str(i).zfill(L))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# muộn rồi mà vẫn chưa ngủ được, thôi thì làm bài này cho vui\n",
+    "# đề bài: https://codeforces.com/problemset/problem/1335/C\n",
+    "# here is the solution\n",
+    "import sys\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    n = int(input())\n",
+    "    a = list(map(int, input().split()))\n",
+    "    d = defaultdict(int)\n",
+    "    for i in a:\n",
+    "        d[i] += 1\n",
+    "    l, r = 0, max(d.values())\n",
+    "    # binary search\n",
+    "    while l < r:\n",
+    "        mid = (l + r + 1) // 2\n",
+    "        if mid <= sum(d[i] // mid for i in d):\n",
+    "            l = mid\n",
+    "        else:\n",
+    "            r = mid - 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 5, 2, 1, 4]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,2,5,2,1,0o4,0]\n",
+    "list(filter(None, a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "w = list(map(int, input().split()))\n",
+    "adj = defaultdict(list)\n",
+    "for _ in range(n - 1):\n",
+    "    u, v = map(int, input().split())\n",
+    "    adj[u].append(v)\n",
+    "    adj[v].append(u)\n",
+    "\n",
+    "stack = [(1, None)]\n",
+    "max_w = [0] * (n + 1)\n",
+    "while stack:\n",
+    "    u, parent = stack.pop()\n",
+    "    for v in adj[u]:\n",
+    "        if v != parent:\n",
+    "            stack.append((v, u))\n",
+    "    max_w[u] = w[u - 1]\n",
+    "    for v in adj[u]:\n",
+    "        if v != parent:\n",
+    "            # choose u or not u and all its children\n",
+    "            pass\n",
+    "# print(max_w)\n",
+    "# sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "# sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "# input = sys.stdin.readline\n",
+    "# n = int(input())\n",
+    "# w = list(map(int, input().split()))\n",
+    "# adj = defaultdict(list)\n",
+    "# for _ in range(n-1):\n",
+    "#     u, v = map(int, input().split())\n",
+    "#     adj[u].append(v)\n",
+    "#     adj[v].append(u)\n",
+    "# def max_w(u):\n",
+    "#     if not adj[u]:\n",
+    "#         return w[u-1]\n",
+    "#     return max(w[u-1], sum(max_w(v) for v in adj[u]))\n",
+    "# print(max_w(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, [[5, 5], [5, 10], [4, 13], [5, 14]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def scheduleCourse(self, courses: List[List[int]]) -> int:\n",
+    "        courses.sort(key=lambda x: x[1])\n",
+    "        ans = duration = 0\n",
+    "        biggest = []\n",
+    "        for dur, last in courses:\n",
+    "            if duration + dur <= last:\n",
+    "                ans += 1\n",
+    "                duration += dur\n",
+    "                heappush(biggest, -dur)\n",
+    "            elif biggest and -biggest[0] > dur:\n",
+    "                duration += dur + heappop(biggest)\n",
+    "                heappush(biggest, -dur)\n",
+    "        return ans, courses\n",
+    "\n",
+    "\n",
+    "courses = [[100, 200], [200, 1300], [1000, 1250], [2000, 3200]]\n",
+    "courses = [[3411, 7142], [602, 8247], [1108, 4342], [7986, 8414], [1696, 8114]]\n",
+    "courses = [[5, 5], [5, 14], [4, 13], [5, 10]]\n",
+    "print(Solution().scheduleCourse(courses))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# random courses using numpy\n",
+    "import numpy as np\n",
+    "x = np.random.randint(1, 10000, size=(200, 2))\n",
+    "x.sort(axis=1)\n",
+    "x = list(map(list,x))\n",
+    "import pyperclip\n",
+    "pyperclip.copy(str(x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "class Solution:\n",
+    "    def numOfArrays(self, n: int, m: int, k: int) -> int:\n",
+    "        @lru_cache(None)\n",
+    "        def count_arrays(index, max_num, remaining_changes):\n",
+    "            if index == n:\n",
+    "                return int(remaining_changes == 0)\n",
+    "            \n",
+    "            ans = (max_num * count_arrays(index + 1, max_num, remaining_changes)) % MOD\n",
+    "            for num in range(max_num + 1, m + 1):\n",
+    "                ans = (ans + count_arrays(index + 1, num, remaining_changes - 1)) % MOD\n",
+    "                \n",
+    "            return ans\n",
+    "        \n",
+    "        MOD = 10 ** 9 + 7\n",
+    "        return count_arrays(0, 0, k)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2\n"
+     ]
+    }
+   ],
+   "source": [
+    "from typing import List\n",
+    "from functools import cache\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def maxDotProduct(self, nums1: List[int], nums2: List[int]) -> int:\n",
+    "        @cache\n",
+    "        def solve(i, j):\n",
+    "            if i == len(nums1) or j == len(nums2):\n",
+    "                return 0\n",
+    "            return max(\n",
+    "                nums1[i] * nums2[j] + solve(i + 1, j + 1),\n",
+    "                solve(i + 1, j),\n",
+    "                solve(i, j + 1),\n",
+    "            )\n",
+    "\n",
+    "        if max(nums1) < 0 and min(nums2) > 0:\n",
+    "            return max(nums1) * min(nums2)\n",
+    "        if max(nums2) < 0 and min(nums1) > 0:\n",
+    "            return max(nums2) * min(nums1)\n",
+    "        return solve(0, 0)\n",
+    "\n",
+    "\n",
+    "nums1 = [4, 2, 12]\n",
+    "nums2 = [-5, -2, -1]\n",
+    "print(Solution().maxDotProduct(nums1, nums2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "from collections import Counter\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "sys.stdin = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.inp\", \"r\")\n",
+    "sys.stdout = open(r\"C:\\Users\\nguye\\Documents\\Code\\Programming\\C++\\test.out\", \"w\")\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "class Solution:\n",
+    "    def mins(self, a, d):\n",
+    "        @lru_cache(maxsize=None)\n",
+    "        def solve(begin):\n",
+    "            mins = float(\"inf\")\n",
+    "            if begin == len(a):\n",
+    "                return 0\n",
+    "            for i in range(begin, len(a)):\n",
+    "                mins = min(\n",
+    "                    mins, (d[a[begin - 1]] - 1) * a[i] + a[begin - 1] + solve(i + 1)\n",
+    "                )\n",
+    "            return mins\n",
+    "\n",
+    "        return solve(1)\n",
+    "\n",
+    "\n",
+    "t = int(input())\n",
+    "for _ in range(t):\n",
+    "    s = Solution()\n",
+    "    n = int(input())\n",
+    "    a = list(map(int, input().split()))\n",
+    "    c = Counter(a)\n",
+    "    if c[0] <= 1:\n",
+    "        print(0)\n",
+    "        continue\n",
+    "    mex = 0\n",
+    "    while mex in c:\n",
+    "        mex += 1\n",
+    "    e = sorted(list(set(a)))\n",
+    "    e.append(mex)\n",
+    "    c[mex] = 1\n",
+    "    print(s.mins(e, c))"
    ]
   }
  ],
